# nod-krai-gi

./: .gitignore  Cargo.toml  README.en.md  README.md  handbook.md
assets/region/: client_custom_cn_config.json  client_custom_config.json  encryption_config.json  region_list.json
crates/common/: Cargo.toml  dispatch-server.default.toml  game-server.default.toml
crates/common/src/: gm_util.rs  (+8 more)
crates/dispatch-server/: Cargo.toml  dispatch-server.default.toml
crates/dispatch-server/src/: config.rs  handlers.rs  main.rs
crates/game-server/: Cargo.toml  game-server.default.toml
crates/game-server-core/: Cargo.toml
crates/game-server-core/src/: command.rs  player_data_sync.rs  player_world.rs  simulator.rs
crates/game-server/src/: config.rs  db_worker.rs  main.rs  player_info_util.rs  util.rs
crates/game-server/src/handler/: get_player_token.rs  gm_util.rs  mod.rs
crates/game-server/src/net/: kcp_connection.rs  mod.rs  udp_server.rs
crates/nod-krai-gi-ability/: Cargo.toml
crates/nod-krai-gi-avatar/: Cargo.toml
crates/nod-krai-gi-combat/: Cargo.toml
crates/nod-krai-gi-command/: Cargo.toml
crates/nod-krai-gi-command/src/: lib.rs  util.rs
crates/nod-krai-gi-data/: Cargo.toml
crates/nod-krai-gi-data/src/: dynamic_float.rs  lib.rs  prop_type.rs
crates/nod-krai-gi-data/src/ability/: ability.rs
crates/nod-krai-gi-data/src/config/: avatar.rs  avatar_talent.rs  equip_talent.rs  gadget.rs  mod.rs  relic_talent.rs  talent_types.rs
crates/nod-krai-gi-data/src/custom/: drop_sub_table_excel_config.rs  drop_table_excel_config.rs  gacha_banner.rs  mod.rs  quest_encryption_key.rs
crates/nod-krai-gi-data/src/excel/: anecdote_excel_config.rs  avatar_costume_excel_config.rs  avatar_curve_excel_config.rs  avatar_excel_config.rs  avatar_flycloak_excel_config.rs  avatar_promote_excel_config.rs  avatar_skill_depot_excel_config.rs  avatar_skill_excel_config.rs  avatar_talent_excel_config.rs  avatar_trace_effect_excel_config.rs  common.rs  daily_dungeon_config.rs  dungeon_challenge_config.rs  dungeon_excel_config.rs  env_animal_gather_excel_config.rs  fetter_data_config.rs  gadget_excel_config.rs  gather_excel_config.rs  map_layer_config.rs  map_layer_floor_config.rs  map_layer_group_config.rs  material_excel_config.rs  mod.rs  monster_curve_excel_config.rs  monster_excel_config.rs  open_state_config.rs  proud_skill_excel_config.rs  quest_config.rs  reliquary_affix_excel_config.rs  reliquary_excel_config.rs  reliquary_level_excel_config.rs  reliquary_main_prop_excel_config.rs  scene_point_config.rs  scene_tag_config.rs  weapon_curve_excel_config.rs  weapon_excel_config.rs  weapon_level_excel_config.rs
crates/nod-krai-gi-data/src/quest/: mod.rs  quest_config.rs
crates/nod-krai-gi-data/src/scene/: group_entity_state_cache.rs  group_spatial_cache.rs  mod.rs  scene_block_template.rs  scene_config_template.rs  scene_group_template.rs  scene_point_config.rs  script_cache.rs
crates/nod-krai-gi-database/: Cargo.toml
crates/nod-krai-gi-database/migrations/: 001_tables.sql
crates/nod-krai-gi-database/src/: config.rs  error.rs  lib.rs
crates/nod-krai-gi-database/src/data/: mod.rs  password.rs  username.rs
crates/nod-krai-gi-database/src/rocksdb_op/: mod.rs  sdk_rocksdb_op.rs
crates/nod-krai-gi-encryption/: Cargo.toml
crates/nod-krai-gi-entity/: Cargo.toml
crates/nod-krai-gi-environment/: Cargo.toml
crates/nod-krai-gi-event/: Cargo.toml
crates/nod-krai-gi-inventory/: Cargo.toml
crates/nod-krai-gi-inventory/src/: equip.rs  gm.rs  item.rs  lib.rs
crates/nod-krai-gi-map/: Cargo.toml
crates/nod-krai-gi-map/src/: lib.rs  on_map.rs
crates/nod-krai-gi-message/: Cargo.toml
crates/nod-krai-gi-message/src/: event.rs  lib.rs  output.rs
crates/nod-krai-gi-proto/: Cargo.toml
crates/nod-krai-gi-proto/proto/: AbilityActionCreateGadget.proto  AbilityActionGenerateElemBall.proto  AbilityActionSetRandomOverrideMapValue.proto  AbilityActionSummon.proto  AbilityAppliedAbility.proto  AbilityAppliedModifier.proto  AbilityAttachedModifier.proto  AbilityChangeNotify.proto  AbilityControlBlock.proto  AbilityEmbryo.proto  AbilityGadgetInfo.proto  AbilityIdentifier.proto  AbilityInvocationsNotify.proto  AbilityInvokeArgument.proto  AbilityInvokeEntry.proto  AbilityInvokeEntryHead.proto  AbilityMetaAddAbility.proto  AbilityMetaModifierChange.proto  AbilityMetaReInitOverrideMap.proto  AbilityMetaSetKilledState.proto  AbilityMixinRecoverInfo.proto  AbilityScalarValueEntry.proto  AbilityString.proto  AbilitySyncStateInfo.proto  Achievement.proto  AchievementAllDataNotify.proto  AchievementUpdateNotify.proto  AcrobaticsBattleDungeonSettleInfo.proto  ActivityPushTipsData.proto  ActivityPushTipsState.proto  ActivityScheduleInfo.proto  ActivityScheduleInfoNotify.proto  ActivityShopSheetInfo.proto  ActivityTakeWatcherRewardReq.proto  ActivityTakeWatcherRewardRsp.proto  ActivityUpdateWatcherNotify.proto  ActivityWatcherInfo.proto  AddBackupAvatarTeamRsp.proto  AddNoGachaAvatarCardNotify.proto  AddNoGachaAvatarCardTransferItem.proto  (+916 more)
crates/nod-krai-gi-proto/server_only/: bin.home.proto  bin.server.proto  bin_common.server.proto  define.proto
crates/nod-krai-gi-proto/src/: dy_parser.rs  gm.rs  lib.rs  normal.rs  packet.rs  packet_head.rs  raw_packet.rs  server_only.rs
crates/nod-krai-gi-quest/: Cargo.toml
crates/nod-krai-gi-quest/src/: gm_command.rs  handle_npc.rs  handle_quest.rs  lib.rs  quest_content_progress.rs  quest_exec.rs  quest_state.rs
crates/nod-krai-gi-scene/: Cargo.toml
crates/nod-krai-gi-scene/src/: common.rs  lib.rs  player_join_team.rs  player_jump.rs  scene_team_update.rs  sync_enter_info.rs
crates/nod-krai-gi-scene/src/avatar/: mod.rs
crates/nod-krai-gi-scene/src/enter/: enter_scene_done.rs  enter_scene_ready.rs  mod.rs  post_enter_scene.rs  scene_init_finish.rs
crates/nod-krai-gi-script/: Cargo.toml
crates/nod-krai-gi-script/src/: challenge_notify.rs  lib.rs  script_entity.rs  script_group_manager.rs  script_lib.rs  script_lib_handle.rs  script_load.rs  script_lua_vm.rs
crates/nod-krai-gi-time/: Cargo.toml
crates/nod-krai-gi-time/src/: lib.rs
(+85 files in other folders)
