cargo-features = ["codegen-backend"]

[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    "crates/nod-krai-gi-data",
    "crates/nod-krai-gi-database",
    "crates/nod-krai-gi-encryption",
    "crates/nod-krai-gi-entity",
    "crates/nod-krai-gi-event",
    "crates/nod-krai-gi-proto",
    "crates/nod-krai-gi-scene",
    "crates/nod-krai-gi-message",
    "crates/kcp",
    "crates/common",
    "crates/dispatch-server",
    "crates/muip-server",
    "crates/game-server",
    "crates/game-server-core",
    "crates/nod-krai-gi-persistence",
    "crates/nod-krai-gi-time",
    "crates/nod-krai-gi-map",
    "crates/nod-krai-gi-command",
    "crates/nod-krai-gi-combat",
    "crates/nod-krai-gi-ability",
    "crates/nod-krai-gi-luashell",
    "crates/nod-krai-gi-environment",
    "crates/nod-krai-gi-inventory",
    "crates/nod-krai-gi-avatar",
    "crates/nod-krai-gi-quest",
    "crates/nod-krai-gi-social",
    "crates/nod-krai-gi-script",
    "crates/nod-krai-gi-event",
]
resolver = "2"

[workspace.package]
version = "0.0.1"

[workspace.dependencies]
# Runtime
crossbeam-queue = "0.3.12"
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8.8"
axum-server = "0.8.0"

# Logic
bevy_app = { version = "0.17.3", default-features = false }
bevy_ecs = { version = "0.17.3", default-features = false }
bevy_derive = "0.17.3"

# Serialization
mlua = { version = "0.11.1", features = ["lua54", "vendored", "serialize", "send"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
lasso = { version = "0.7.3", features = ["multi-threaded"] }
toml = "0.8"
base64-simd = "0.8"

prost = "0.14.1"
prost-build = "0.14.1"

#protobuf = { path = "../rust-protobuf/protobuf" }
#protobuf-json-mapping = { path = "../rust-protobuf/protobuf-json-mapping" }
#protobuf-parse = { path = "../rust-protobuf/protobuf-parse" }

protobuf = "3.7.2"
protobuf-json-mapping = "3.7.2"
protobuf-parse = "3.7.2"

# Error processing
anyhow = "1.0.102"
thiserror = "2.0.18"

# Networking

# Cryptography
rsa = { version = "0.9.9", features = ["sha2"] }
rand_mt = "5.0.0"
password-hash = { version = "0.5.0", features = ["alloc", "rand_core"] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }

# Database
rocksdb = "0.24.0"

# Encoding
byteorder = "1.5.0"

# Util
paste = "1.0.15"
rand = "0.8"
regex = "1.11.1"
hex = "0.4.3"
num_enum = "0.7.3"
dashmap = "6.1.0"
indexmap = { version = "2.7.1", features = ["serde"] }
notify = "8.0.0"
notify-debouncer-mini = "0.7.0"
rayon = "1.10.0"

# Logging
tracing = { version = "*" }
tracing-subscriber = { version = "*", features = ["env-filter"] }

# Internal
common = { path = "crates/common" }
kcp = { path = "crates/kcp", features = ["tokio"] }
nod-krai-gi-data = { path = "crates/nod-krai-gi-data" }
nod-krai-gi-database = { path = "crates/nod-krai-gi-database" }
nod-krai-gi-encryption = { path = "crates/nod-krai-gi-encryption" }
nod-krai-gi-proto = { path = "crates/nod-krai-gi-proto" }
nod-krai-gi-entity = { path = "crates/nod-krai-gi-entity" }
nod-krai-gi-event = { path = "crates/nod-krai-gi-event" }
nod-krai-gi-avatar = { path = "crates/nod-krai-gi-avatar" }
nod-krai-gi-scene = { path = "crates/nod-krai-gi-scene" }
nod-krai-gi-environment = { path = "crates/nod-krai-gi-environment" }
nod-krai-gi-pathfinding = { path = "crates/nod-krai-gi-pathfinding" }
nod-krai-gi-combat = { path = "crates/nod-krai-gi-combat" }
nod-krai-gi-ability = { path = "crates/nod-krai-gi-ability" }
nod-krai-gi-social = { path = "crates/nod-krai-gi-social" }
nod-krai-gi-quest = { path = "crates/nod-krai-gi-quest" }
nod-krai-gi-script = { path = "crates/nod-krai-gi-script" }
nod-krai-gi-time = { path = "crates/nod-krai-gi-time" }
nod-krai-gi-map = { path = "crates/nod-krai-gi-map" }
nod-krai-gi-inventory = { path = "crates/nod-krai-gi-inventory" }
nod-krai-gi-command = { path = "crates/nod-krai-gi-command" }
nod-krai-gi-message = { path = "crates/nod-krai-gi-message" }
nod-krai-gi-persistence = { path = "crates/nod-krai-gi-persistence" }
nod-krai-gi-luashell = { path = "crates/nod-krai-gi-luashell" }
game-server-core = { path = "crates/game-server-core" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

branches_sharing_code = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
checked_conversions = "allow"
cognitive_complexity = "allow"
collection_is_never_read = "allow"
fallible_impl_from = "allow"
fn_params_excessive_bools = "allow"
inline_always = "allow"
if_not_else = "allow"
items_after_statements = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
range_plus_one = "allow"
redundant_clone = "allow"
redundant_closure_for_method_calls = "allow"
ref_option = "allow"
similar_names = "allow"
string_lit_as_bytes = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
transmute_undefined_repr = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
used_underscore_items = "allow"


[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimize for speed.
codegen-units = 1 # Maximum size reduction optimizations.
