[package]
name = "nod-krai-gi-command"
edition = "2021"
version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
tracing.workspace = true
rand.workspace = true

common.workspace = true

nod-krai-gi-data.workspace = true
nod-krai-gi-scene.workspace = true
nod-krai-gi-entity.workspace = true
nod-krai-gi-persistence.workspace = true
nod-krai-gi-message.workspace = true
nod-krai-gi-proto.workspace = true
nod-krai-gi-social.workspace = true
nod-krai-gi-quest.workspace = true
