[package]
name = "nod-krai-gi-database"
edition = "2021"
version.workspace = true

[dependencies]
rocksdb.workspace = true
serde.workspace = true
regex.workspace = true
thiserror.workspace = true

serde_json.workspace = true
pbkdf2.workspace = true
password-hash.workspace = true
rand.workspace = true
