[package]
name = "nod-krai-gi-message"
edition = "2021"
version.workspace = true

[dependencies]
tokio.workspace = true

# Logic
bevy_ecs.workspace = true

# Serialization
serde.workspace = true

# Logging
tracing.workspace = true

# Util
hex.workspace = true
dashmap.workspace = true

# Internal
common.workspace = true
nod-krai-gi-proto.workspace = true
nod-krai-gi-data.workspace = true
