[package]
name = "nod-krai-gi-quest"
edition = "2024"
version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true

common.workspace = true

nod-krai-gi-proto.workspace = true
nod-krai-gi-message.workspace = true
nod-krai-gi-data.workspace = true
nod-krai-gi-persistence.workspace = true