[package]
name = "nod-krai-gi-scene"
edition = "2021"
version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_derive.workspace = true

rand.workspace = true
tracing.workspace = true

common.workspace = true

nod-krai-gi-data.workspace = true
nod-krai-gi-entity.workspace = true
nod-krai-gi-event.workspace = true
nod-krai-gi-message.workspace = true
nod-krai-gi-persistence.workspace = true
nod-krai-gi-proto.workspace = true
