[package]
name = "nod-krai-gi-time"
edition = "2021"
version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
tracing.workspace = true

common.workspace = true
nod-krai-gi-proto.workspace = true
nod-krai-gi-event.workspace = true
nod-krai-gi-message.workspace = true
nod-krai-gi-persistence.workspace = true
